# voice2text

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
installer/: Voice2Text.iss  setup_freeze.py
scripts/: build_installer.ps1
src/voice2text/: __init__.py  __main__.py  auth.py  background.py  config.py  corrections.py  gesture.py  glean_client.py  gui_streams.py  hotkey.py  instance_lock.py  local_runtime.py  main.py  model_settings.py  model_setup.py  onboarding.py  overlay.py  paster.py  recorder.py  recording_pill.py  recording_test.py  transcriber.py  tray.py  trigger_settings.py  trigger_setup.py  vocabulary.py
tests/: test_auth.py  test_background.py  test_config.py  test_corrections.py  test_gesture.py  test_glean_client.py  test_hotkey.py  test_instance_lock.py  test_local_runtime.py  test_main.py  test_model_settings.py  test_model_setup.py  test_module_entry.py  test_onboarding.py  test_overlay.py  test_paster.py  test_recorder.py  test_recording_pill.py  test_recording_test.py  test_transcriber.py  test_tray.py  test_trigger_settings.py  test_vocabulary.py
